2009-01-27  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Match the way dwarflint reports offsets with the
	way elfutils does it.

2009-01-26  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c (check_aranges_structural): Check that each CU is
	referenced from one aranges section only.
	(check_pub_structural): Likewise for pubnames and pubtypes.
	(read_ctx_read_uleb128): Allow ten-byte ULEB128.

2009-01-23  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c (check_debug_info_structural): Check that all CUs
	have the same address size.

2009-01-17  Roland McGrath  <roland@redhat.com>

	* expr_opcodes.h: Fix DW_OP_deref entry.
	Add DW_OP_GNU_push_tls_address, DW_OP_GNU_uninit.

2009-01-17  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Better location handling: references now carry
	along where did they originate (i.e. which section, offset, etc.),
	all messages are location-aware.
	(struct where): New structure that captures location inside the
	Dwarf file.  Can be chained to achieve chains of "caused by this
	reference" messages ala GCC.

2009-01-15  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Implement validation of .debug_loc and references
	from .debug_info to .debug_loc.

2009-01-14  Petr Machata  <pmachata@redhat.com>

	* dwarfstrings.h (dwarf_locexpr_opcode_string): New.

2009-01-14  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Validation .debug_pubtypes.

2009-01-13  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Adjust check_pubnames_structural to be able to
	validate also .debug_pubtypes.

2009-01-13  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Rewrite message macros to functions.  This makes it
	possible to rewrite several other macros to functions.

2009-01-12  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Implement validation of .debug_pubnames.

2009-01-12  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Check padding between sections in .debug_aranges.
